PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
12 Nov 2009, PHP 5.3.1 RC4
- Updated timezone database to version 2009.17 (2009q). (Derick)

- Fixed bug #50063 (safe_mode_include_dir fails). (Johannes, christian at
  elmerot dot se)

03 Nov 2009, PHP 5.3.1 RC3
- Added "max_file_uploads" INI directive, which can be set to limit the
  number of file uploads per-request to 20 by default, to prevent possible
  DOS via temporary file exhaustion. (Ilia)

- Fixed crash in com_print_typeinfo when an invalid typelib is given. (Pierre)

- Fixed bug #50052 (Different Hashes on Windows and Linux on wrong Salt size).
  (Pierre)
- Fixed bug #49908 (throwing exception in __autoload crashes when interface
  is not defined). (Felipe)
- Fixed bug #49142 (crash when exception thrown from __tostring()).
  (David Soria Parra)
- Fixed bug #49986 (Missing ICU DLLs on windows package). (Pierre)
- Fixed bug #48752 (Crash during date parsing with invalid date). (Pierre)

20 Oct 2009, PHP 5.3.1 RC2
- Upgraded bundled sqlite to version 3.6.19. (Scott)

- Fixed a safe_mode bypass in tempnam() identified by Grzegorz Stachowiak.  
  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak.  (Rasmus)
- Fixed certificate validation inside php_openssl_apply_verification_policy
  (Ryan Sleevi, Ilia)

- Fixed crash in SQLiteDatabase::ArrayQuery() and SQLiteDatabase::SingleQuery()
  when calling using Reflection. (Felipe)
- Fixed crash when instantiating PDORow and PDOStatement through Reflection.
  (Felipe)
- Changed ini file directives [PATH=](on Win32) and [HOST=](on all) to be case 
  insensitive (garretts)
- Restored shebang line check to CGI sapi (not checked by scanner anymore).
  (Jani)
- Added support for ACL on Windows for thread safe SAPI (Apache2 for example)
  and fix its support on NTS. (Pierre)